# hand-landmarks-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: anchors.cpp  hand_landmark_detection.cpp  hand_landmark_detection.h  image_preprocess.cpp  image_preprocess.h  main.cpp  palm_detection.cpp  palm_detection.h  typedef_struct.h
